compiler/testData/diagnostics/tests/invalidTargetCrashesCompiler.kt
// ISSUE: KT-59110

<!WRONG_ANNOTATION_TARGET!>@Target(<!ANNOTATION_ARGUMENT_MUST_BE_CONST, TYPE_MISMATCH!>{}<!>)<!>
interface SomeInterface {
}
